Add production level features